fix: hero padding-top 8vh pour éviter overlap avec nav fixe

--- a/css/intro.css
+++ b/css/intro.css
@@ -201,6 +201,7 @@ p {
   background-position: top center;
   position: relative;
   z-index: 1;
+  padding-top: 8vh;
 }
 #hero::after {
   content: "";
